tests/errors/semantic/non_blocking/INCOMPATIBLE_TYPES_IN_ASSIGNMENT_6.py
# Containers
# pylint: disable=missing-module-docstring

a = [2,5]
b = [3]
b = a
